tests/golden/type_errors/struct_method_wrong_argument.cd
struct Box { value: number }
impl Box { fun add(amount: number): number { return this.value + amount; } }
let b: Box = Box { value: 1 };
print b.add("bad");
